JumpScript/tests/baselines/reference/invalidEnumAssignments.errors.txt
tests/cases/conformance/types/primitives/enum/invalidEnumAssignments.jump(14,1): error TS2322: Type 'E2.A' is not assignable to type 'E'.
tests/cases/conformance/types/primitives/enum/invalidEnumAssignments.jump(15,1): error TS2322: Type 'E.A' is not assignable to type 'E2'.
tests/cases/conformance/types/primitives/enum/invalidEnumAssignments.jump(16,1): error TS2322: Type 'void' is not assignable to type 'E'.
tests/cases/conformance/types/primitives/enum/invalidEnumAssignments.jump(17,1): error TS2322: Type '{}' is not assignable to type 'E'.
tests/cases/conformance/types/primitives/enum/invalidEnumAssignments.jump(18,1): error TS2322: Type '""' is not assignable to type 'E'.
tests/cases/conformance/types/primitives/enum/invalidEnumAssignments.jump(21,5): error TS2322: Type 'T' is not assignable to type 'E'.


==== tests/cases/conformance/types/primitives/enum/invalidEnumAssignments.jump (6 errors) ====
    enum E {
        A,
        B
    }
    
    enum E2 {
        A,
        B
    }
    
    var e: E;
    var e2: E2;
    
    e = E2.A;
    ~
!!! error TS2322: Type 'E2.A' is not assignable to type 'E'.
    e2 = E.A;
    ~~
!!! error TS2322: Type 'E.A' is not assignable to type 'E2'.
    e = <void>null;
    ~
!!! error TS2322: Type 'void' is not assignable to type 'E'.
    e = {};
    ~
!!! error TS2322: Type '{}' is not assignable to type 'E'.
    e = '';
    ~
!!! error TS2322: Type '""' is not assignable to type 'E'.
    
    function f<T>(a: T) {
        e = a;
        ~
!!! error TS2322: Type 'T' is not assignable to type 'E'.
    }